<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="action_random">Random</string>
    <string name="action_settings">Settings</string>
    <string name="action_switch_case">Switch Case</string>
    
    <string name="app_name">Rishi</string>           
    <string name="activity_words_name">Words</string>
    <string name="activity_numbers_name">Numbers</string>
    <string name="activity_colors_name">Colors</string>
    <string name="activity_letters_name">Letters</string>
    <string name="activity_shapes_name">Shapes</string>
    <string name="words_animals_name">Animals</string>
    <string name="words_foods_name">Foods</string>
    
    <string name="apple">apple</string>
    <string name="banana">banana</string>
    <string name="carrot">carrots</string>
    <string name="date">dates</string>
    <string name="egg">egg</string>
    <string name="fig">figs</string>
    <string name="grape">grapes</string>
    <string name="honey">honey</string>
    <string name="ice_cream">ice cream</string>
    <string name="kiwi">kiwi</string>
    <string name="lemon">lemons</string>
    <string name="milk">milk</string>
    <string name="orange_food">oranges</string>
    <string name="pineapple">pineapple</string>
    <string name="raspberry">raspberry</string>
    <string name="tomato">tomatoes</string>
    <string name="zucchini">zucchinis</string>
    
    <string name="bear">bear</string>
    <string name="bird">bird</string>
    <string name="camel">camel</string>
    <string name="cat">cat</string>
    <string name="chicken">chicken</string>
    <string name="cow">cow</string>
    <string name="dog">dog</string>
    <string name="duck">duck</string>
    <string name="elephant">elephant</string>
    <string name="fish">fish</string>
    <string name="giraffe">giraffe</string>
    <string name="horse">horse</string>
    <string name="iguana">iguana</string>
    <string name="kangaroo">kangaroo</string>
    <string name="lion">lion</string>
    <string name="mouse">mouse</string>
    <string name="pig">pig</string>
    <string name="sheep">sheep</string>
    <string name="turtle">turtle</string>
    <string name="whale">whale</string>
    
    <string name="a_one">one</string>
    <string name="b_two">two</string>
    <string name="c_three">three</string>
    <string name="d_four">four</string>
    <string name="e_five">five</string>
    <string name="f_six">six</string>
    <string name="g_seven">seven</string>
    <string name="h_eight">eight</string>
    <string name="i_nine">nine</string>    
    <string name="j_ten">ten</string>
    <string name="k_eleven">eleven</string>
    <string name="l_twelve">twelve</string>
    
    <string name="circle">circle</string>
    <string name="crescent">crescent</string>
    <string name="rectangle">rectangle</string>
    <string name="square">square</string>
    <string name="star">star</string>
    <string name="triangle">triangle</string>
    
    <string name="black">black</string>
    <string name="blue">blue</string>
    <string name="brown">brown</string>
    <string name="green">green</string>
    <string name="orange_color">orange</string>
    <string name="pink">pink</string>
    <string name="purple">purple</string>
    <string name="red">red</string>
    <string name="white">white</string>
    <string name="yellow">yellow</string>    
    
    <string-array name="letters">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    
    <string-array name="letters_lower">
        <item>a</item>
        <item>b</item>
        <item>c</item>
        <item>d</item>
        <item>e</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>i</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>m</item>
        <item>n</item>
        <item>o</item>
        <item>p</item>
        <item>q</item>
        <item>r</item>
        <item>s</item>
        <item>t</item>
        <item>u</item>
        <item>v</item>
        <item>w</item>
        <item>x</item>
        <item>y</item>
        <item>z</item>
    </string-array>
    
    <string-array name="pref_locales">
        <item>English</item>                        
        <item>Marathi</item>
        <item>Spanish</item>
    </string-array>
    
    <string name="locale_english">English</string>
    <string name="locale_marathi">Marathi</string>
    <string name="locale_spanish">Spanish</string>
    
    <string-array name="pref_localeValues">
        <item>en_US</item>        
        <item>mr</item>
        <item>es_MX</item>
    </string-array>
    
    <string name="pref_locale_title">Language</string>
    <string name="pref_locale_key">pref_language</string>
    <string name="pref_locale_default">en_US</string>
</resources>