<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item 
        android:id="@+id/action_previous"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_media_previous"
        android:title="@string/action_previous" />
    
    <item
        android:id="@+id/action_next"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_media_next"
        android:title="@string/action_next" />
    
    <item
        android:id="@+id/action_random"
        android:showAsAction="ifRoom"
        android:title="@string/action_random" />
        
	<item        
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>